# esp32-p4-dsi-mpe-controller

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
components/mpe-applemidi/: CMakeLists.txt
components/mpe-applemidi/include/: mpe_applemidi.h
components/mpe-applemidi/src/: mpe_applemidi.c
components/mpe-display/: CMakeLists.txt
components/mpe-display/include/: mpe_display.h
components/mpe-display/src/: mpe_display.c
components/mpe-font/: CMakeLists.txt
components/mpe-font/include/: mpe_font.h
components/mpe-font/src/: mpe_font.c
components/mpe-osc/: CMakeLists.txt
components/mpe-osc/include/: mpe_osc.h
components/mpe-osc/src/: mpe_osc.c
components/mpe-paint/: CMakeLists.txt
components/mpe-paint/include/: mpe_paint.h
components/mpe-paint/src/: mpe_paint.c
components/mpe-screenshot/: CMakeLists.txt
components/mpe-screenshot/include/: mpe_screenshot.h
components/mpe-screenshot/src/: mpe_screenshot.c
components/mpe-touch/: CMakeLists.txt
components/mpe-touch/include/: mpe_touch.h
components/mpe-touch/src/: mpe_touch.c
components/mpe-wifi/: CMakeLists.txt
components/mpe-wifi/include/: mpe_wifi.h
components/mpe-wifi/src/: mpe_wifi.c
docs/: grab_screenshot.sh
main/: CMakeLists.txt  Kconfig.projbuild  controller.cpp  controller.h  idf_component.yml  main.cpp  ui.cpp  ui.h
